--- a/Reservations/src/main/resources/application.properties
+++ b/Reservations/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=Reservations
+# Server Configuration
+server.port=8083
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/hotel_system?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=15243
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Schema for Reservation Microservice
+spring.jpa.properties.hibernate.default_schema=hotel_system
