--- a/Reservations/src/main/resources/application.properties
+++ b/Reservations/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Schema for Reservation Microservice
 spring.jpa.properties.hibernate.default_schema=hotel_system
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+# Optional: Set custom API docs paths
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
