--- a/Rooms/src/main/resources/application.properties
+++ b/Rooms/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Schema for Room Microservice
 spring.jpa.properties.hibernate.default_schema=hotel_system
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+# Optional: Set custom API docs paths
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
