--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 spring.application.name=gateway
 server.port=9000
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+# Optional: Set custom paths
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+# Enable Swagger UI
+
+# Swagger documentation aggregation
+springdoc.swagger-ui.urls[0].name=Room Service
+springdoc.swagger-ui.urls[0].url=/aggregate/room-service/v3/api-docs
+springdoc.swagger-ui.urls[1].name=Customer Service
+springdoc.swagger-ui.urls[1].url=/aggregate/customer-service/v3/api-docs
+springdoc.swagger-ui.urls[2].name=Reservation Service
+springdoc.swagger-ui.urls[2].url=/aggregate/reservation-service/v3/api-docs
