--- a/Customers/src/main/resources/application.properties
+++ b/Customers/src/main/resources/application.properties
@@ -22,3 +22,14 @@ springdoc.swagger-ui.enabled=true
 # Optional: Set custom API docs paths
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+
+springdoc.swagger-ui.urls[0].name=Customers Service
+springdoc.swagger-ui.urls[0].url=/aggregate/customer-service/v3/api-docs
+springdoc.swagger-ui.urls[1].name=Reservation Service
+springdoc.swagger-ui.urls[1].url=/aggregate/reservation-service/v3/api-docs
+springdoc.swagger-ui.urls[2].name=Rooms Service
+springdoc.swagger-ui.urls[2].url=/aggregate/room-service/v3/api-docs
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/eshop
+logging.level.org.springframework.security=DEBUG
