--- a/Reservations/pom.xml
+++ b/Reservations/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>HotelReservation</groupId>
 	<artifactId>Reservations</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>Reservations</name>
 	<description>Reservations</description>
 	<url/>
