--- a/Rooms/pom.xml
+++ b/Rooms/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>HotelReservation</groupId>
     <artifactId>Rooms</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>Rooms</name>
     <description>Rooms</description>
     <url/>
