--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>HotelReservation</groupId>
 	<artifactId>gateway</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>gateway</name>
 	<description>gateway</description>
 	<url/>
